<resources>
    <string name="app_name">Movie Catalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">Title</string>
    <string name="mortal_kombat">Mortal Kombat</string>
    <string name="director">Director: Simon McQuoid</string>
    <string name="rating">7.0/10</string>
    <string name="movie_description">MMA fighter Cole Young (Lewis Tan), accustomed to taking a beating for money, is unaware of his heritage-or why Outworld\'s Emperor Shang Tsung (Chin Han) has sent his best warrior, Sub-Zero (Joe Taslim), an otherworldly Cryomancer, to hunt Cole down. Fearing for his family\'s safety, Cole goes in search of Sonya Blade (Jessica McNamee) at the direction of Jax (Mehcad Brooks), a Special Forces Major who bears the same strange dragon marking Cole was born with. Soon, he finds himself at the temple of Lord Raiden (Tadanobu Asano), an Elder God and the protector of Earthrealm, who grants sanctuary to those who bear the mark. Here, Cole trains with experienced warriors Liu Kang (Ludi Lin), Kung Lao (Max Huang) and rogue mercenary Kano (Josh Lawson), as he prepares to stand with Earth\'s greatest champions against the enemies of Outworld in a high stakes battle for the universe. But will Cole be pushed hard enough to unlock his arcana-the immense power from within his soul-in time to save not… Written by Warner Bros.</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="search_tv_show">Search Tv Show</string>
    <string name="status">Status: End</string>
    <string name="favorites">Favorites</string>
    <string name="tvshowrv">tvshowrv</string>


    //sub1 resource

</resources>